# backend/api/src/routes/localidad.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import { listarLocalidades } from "../controllers/localidad.controllers.js";
+
+const localidadRouter = Router();
+
+localidadRouter.get("/", listarLocalidades);
+
+export default localidadRouter;
